# Mistral-OCR

./: .gitignore  README.md  pyproject.toml
mistral_ocr/: gui.py
